--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.71</title>
+    <title>Degens Idle v0.72</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" type="text/css" href="settings.css">
@@ -34,7 +34,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.71</h1>
+                <h1 id="title">Degens Idle v0.72</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Entire Game</button>
@@ -178,7 +178,7 @@
             <button id="discordButton">
                 <img src="imgs/textures/discord.svg" alt="Discord" id="discordIcon">
             </button>
-            <button id="donateButton" Donate style="display: none;"></button>
+            <button id="donateButton">Donate</button>
             <button id="closeSettingsButton">Exit</button>
         </div>
     </div>
@@ -187,10 +187,10 @@
         <div class="donation-overlay-content">
             <span class="close-button" id="closeDonationOverlay">&times;</span>
             <h1>Support the Game</h1>
-            <p>Thank you for considering a donation! This game is a passion project from someone who loves idle games. I plan to continue development regardless, and I will never add paid features or ads to the game. While I'm not struggling financially, a donation to show your support is much appreciated.</p>
-            <button id="donateSmallButton">Donate 1</button>
-            <button id="donateMediumButton">Donate 2</button>
-            <button id="donateLargeButton">Donate 3</button>
+            <p>Hey there, fellow idle game enthusiast! Thanks for even thinking about donating! Making an idle game has always been a dream of mine (my 6,000+ hours on NGU Idle can attest to that), and this game is my baby, born from a deep love for idle games and a desire to bring joy to your screen. This is my first game ever, and I had to reach back over a decade to remember things I learned as an undergrad. No matter what, this is a passion project, so I'll keep developing it, and I promise—no paid features or ads of any kind will ever invade our fun. While I'm not struggling financially (no ramen diet here, unless by choice), a little token of appreciation from you would mean the world to me. It’s like a virtual high-five that keeps me motivated to juggle this project alongside my full-time job, life responsibilities, and other numerous hobbies. So, if you enjoy the game and can spare a few coins, it would be an enormous encouragement! Thanks a bunch!</p>
+            <button id="donateSmallButton">Buy me a Coffee</button>
+            <button id="donateMediumButton">Venmo me directly</button>
+            <button id="donateLargeButton">Cash by Carrier Pidgeon</button>
             <button id="closeDonationButton">Exit</button>
         </div>
     </div>
