--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.74</title>
+    <title>Degens Idle v0.75</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" type="text/css" href="settings.css">
@@ -43,7 +43,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.74</h1>
+                <h1 id="title">Degens Idle v0.75</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Entire Game</button>
@@ -141,6 +141,7 @@
                     <option value="trollPoints">Troll Points</option>
                 </select>
                 
+                <label for="fromResource">To:</label>
                 <select id="toResource" onchange="updateTradeRatio()">
                     <option value="copium">Copium</option>
                     <option value="delusion">Delusion</option>
@@ -149,7 +150,7 @@
                     <option value="hopium">Hopium</option> <!-- Add Hopium as a tradeable resource -->
                 </select>
                 <label for="tradeAmount">Amount:</label>
-                <input type="text" id="tradeAmount" value="" placeholder="Enter amount (e.g., 1M)">
+                <input type="text" id="tradeAmount" value="" placeholder="Enter (e.g. 1.5M or 50%)">
                 <p id="tradeRatioDisplay">Trade ratio is 10:1</p>
                 <button id="tradeButton">Trade</button>
             </div>
