--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.765</title>
+    <title>Degens Idle v0.8</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" type="text/css" href="settings.css">
@@ -43,7 +43,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.765</h1>
+                <h1 id="title">Degens Idle v0.8</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Entire Game</button>
@@ -114,11 +114,15 @@
                 </button>
             </div>
             <button id="prestigeButton" style="display:none;">Prestige</button>
-            <p class="prestige=multiplier-text">
+            <p class="prestige-multiplier-text">
                 <span id="prestige-multiplier" class="prestige-multiplier-count">Prestige: x1.00 mult</span>
             </p>
             <button id="ascendButton" style="display:none;">Ascend Above Mortals</button>
             <p class="god-mode-text" id="god-mode-display">God-Mode Level 0 (x1.00 mult)</p>
+            <button id="transcendButton" style="display:none;">Parallel Universe Transcend</button>
+            <p class="pu-god-text" id="pu-god-display" style="display:none;">PU God Level 0 (x1.00 mult)</p>
+            <button id="bigCrunchButton" style="display:none;">Big Crunch</button>
+            <p class="big-crunch-text" id="big-crunch-display" style="display:none;">Big Crunch Power 1e-7 (x1.00 mult)</p>
         </div>
         <div id="upgrades">
             <h2>Upgrades</h2>
