--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <span class="close-button" id="closeMessageModal">&times;</span>
             <h2 id="modalTitle"></h2>
             <p id="modalMessage"></p>
+            <img id="modalImage" src="" style="display: none; max-width: 100%; max-height: 600px; margin: 10px 0;">
             <button id="modalCloseButton">Close</button>
             <div id="modalConfirmButtons" style="display:none;">
                 <button id="modalConfirmButton">Confirm</button>
