--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.81</title>
+    <title>Degens Idle v0.811</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" type="text/css" href="settings.css">
@@ -52,7 +52,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.81</h1>
+                <h1 id="title">Degens Idle v0.811</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Entire Game</button>
@@ -198,6 +198,10 @@
                 <button id="exportSaveButton">Export Save</button>
                 <button id="importSaveButton">Import Save</button>
             </div>
+            <div class="settings-note">
+                Your feedback is crucial as the game grows. I genuinely value every suggestion and insight you share. Thank you for helping shape the future of Degens Idle!
+            </div>
+            <button id="feedbackButton">Give Feedback</button>
             <p class="discord-note">I'd love to see you join our Discord! Whether you just want to show you enjoyed the game or share some feedback (good or bad), your support means a lot!</p>
             <button id="discordButton">
                 <img src="imgs/textures/discord.svg" alt="Discord" id="discordIcon">
@@ -211,7 +215,7 @@
         <div class="donation-overlay-content">
             <span class="close-button" id="closeDonationOverlay">&times;</span>
             <h1>Support the Game</h1>
-            <p>Hey there, fellow idle game enthusiast! Thanks for even thinking about donating! Making an idle game has always been a dream of mine, and this game is my baby, born from a deep love for idle games and a desire to bring joy to your screen. This is my first game ever, and I had to reach back over a decade to remember things I learned as an undergrad. No matter what, this is a passion project, so I'll keep developing it, and I promise—no paid features or ads of any kind will ever invade our fun. While I'm not struggling financially (no ramen diet here, unless by choice), a little token of appreciation from you would mean the world to me. It’s like a virtual high-five that keeps me motivated to juggle this project alongside my full-time job, life responsibilities, and other numerous hobbies. So, if you enjoy the game and can spare a few coins, it would be an enormous encouragement! Thanks a bunch!</p>
+            <p>Thanks for even thinking about donating! Making an idle game has always been a dream of mine, and this game is my baby, born from a deep love for idle games and a desire to bring joy to your screen. This is my first game ever, and I had to reach back over a decade to remember things I learned as an undergrad. No matter what, this is a passion project, so I'll keep developing it, and I promise—no paid features or ads of any kind will ever invade our fun. While I'm not struggling financially (no ramen diet here, unless by choice), a little token of appreciation from you would mean the world to me. It’s like a virtual high-five that keeps me motivated to juggle this project alongside my full-time job, life responsibilities, and other numerous hobbies. So, if you enjoy the game and can spare a few coins, it would be an enormous encouragement! Thanks a bunch!</p>
             <button id="donateSmallButton">Buy me a Coffee</button>
             <button id="donateMediumButton">Venmo me directly</button>
             <button id="donateLargeButton">Cash by Carrier Pidgeon</button>
