--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
                     <span class="cookieTooltip">Each cookie click counts as 10 clicks on collect buttons for Copium, Delusion, Yacht Money, and Troll Points!</span>
                 </button>
             </div>
-            <button id="prestigeButton" style="display:none;">Prestige</button>
+            <button id="prestigeButton" style="display:none;" class="custom-button">Prestige</button>
             <p class="prestige-multiplier-text">
                 <span id="prestige-multiplier" class="prestige-multiplier-count">Prestige: x1.00 mult</span>
             </p>
-            <button id="ascendButton" style="display:none;">Ascend Above Mortals</button>
+            <button id="ascendButton" style="display:none;" class="custom-button">Ascend Above Mortals</button>
             <p class="god-mode-text" id="god-mode-display">God-Mode Level 0 (x1.00 mult)</p>
-            <button id="transcendButton" style="display:none;">Parallel Universe Transcend</button>
+            <button id="transcendButton" style="display:none;" class="custom-button">Parallel Transcend</button>
             <p class="pu-god-text" id="pu-god-display" style="display:none;">PU God Level 0 (x1.00 mult)</p>
-            <button id="bigCrunchButton" style="display:none;">Big Crunch</button>
+            <button id="bigCrunchButton" style="display:none;" class="custom-button">Big Crunch</button>
             <p class="big-crunch-text" id="big-crunch-display" style="display:none;">Big Crunch Power 1e-7 (x1.00 mult)</p>
             <button id="libraryButton">Hall of Knowledge</button>
         </div>
