--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.827</title>
+    <title>Degens Idle v0.83</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
@@ -53,7 +53,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.827</h1>
+                <h1 id="title">Degens Idle v0.83</h1>
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Entire Game</button>
@@ -194,7 +194,7 @@
         <div class="powerhall-overlay-content">
             <span class="close-button" id="closePowerHallOverlay">&times;</span>
             <h1>HALL OF POWER</h1>
-            <h4>Welcome to the formidable Hall of Power. Here you will discover the essence of true strength and dominance, unlocking abilities that channel the raw force of the megaverse itself.<br><br>Each skill you master here enhances your journey, bringing you closer to the ultimate power that persists through every challenge and triumph.</h4>
+            <h4>Welcome to the Hall of Power, a place where the strongest beings from countless realities converge. Nestled between the threads of the megaverse, this market of might is unlike anything you've ever encountered. Here, the air crackles with energy as warriors, sorcerers, and cosmic entities barter and trade not for trinkets, but for raw power itself.<br><br>                Each skill you master within these hallowed grounds is a key to unlocking the primordial forces that bind the megaverse together. As you hone your abilities, you’ll find yourself ascending through challenges that test the limits of your strength, pushing you ever closer to the ultimate power that echoes through every universe and dimension.</h4>
             <div id="powerHallSkills">
                 <!-- Power skills will be dynamically added here -->
             </div>
