--- a/index.html
+++ b/index.html
@@ -67,7 +67,10 @@
                 <p class="per-second">Copium per second: <span id="cps">0</span></p>
                 <div class="buttons">
                     <button id="collectCopiumButton" class="collect-button">Collect Copium</button>
-                    <button id="speedGame" class="game-button">Speed Game</button>
+                    <button id="speedGame" class="game-button">
+                        <span class="button-content">Speed Game</span>
+                        <div class="progress"></div>
+                    </button>
                 </div>
             </div>
             <div class="resource">
@@ -80,7 +83,10 @@
                 </p>
                 <div class="buttons">
                     <button id="collectDelusionButton" class="collect-button">Collect Delusion</button>
-                    <button id="memoryGame" class="game-button">Memory Game</button>
+                    <button id="memoryGame" class="game-button">
+                        <span class="button-content">Memory Game</span>
+                        <div class="progress"></div>
+                    </button>
                 </div>
             </div>
             <div class="resource">
@@ -88,7 +94,10 @@
                 <p class="per-second">Yacht Money per second: <span id="ymps">0</span></p>
                 <div class="buttons">
                     <button id="collectYachtMoneyButton" class="collect-button">Collect Yacht Money</button>
-                    <button id="mathGame" class="game-button">Math Game</button>
+                    <button id="mathGame" class="game-button">
+                        <span class="button-content">Math Game</span>
+                        <div class="progress"></div>
+                    </button>
                 </div>
             </div>
             <div class="resource">
@@ -96,7 +105,10 @@
                 <p class="per-second">Troll Points per second: <span id="tpps">0</span></p>
                 <div class="buttons">
                     <button id="collectTrollPointsButton" class="collect-button">Collect Troll Points</button>
-                    <button id="luckGame" class="game-button">Luck Game</button>
+                    <button id="luckGame" class="game-button">
+                        <span class="button-content">Luck Game</span>
+                        <div class="progress"></div>
+                    </button>
                 </div>
             </div>
             <div class="resource">
