--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.831</title>
+    <title>Degens Idle v0.832</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
@@ -24,7 +24,7 @@
             <span class="close-button" id="closeMessageModal">&times;</span>
             <h2 id="modalTitle"></h2>
             <p id="modalMessage"></p>
-            <img id="modalImage" src="" style="display: none; max-width: 100%; max-height: 600px; margin: 10px 0;">
+            <img id="modalImage" src="" style="display: none; max-width: 100%; max-height: 1800px; margin: 10px 0;">
             <button id="modalCloseButton">Close</button>
             <div id="modalConfirmButtons" style="display:none;">
                 <button id="modalConfirmButton">Confirm</button>
@@ -53,7 +53,7 @@
     <div id="main-container">
         <div id="title-column">
             <div id="title-container">
-                <h1 id="title">Degens Idle v0.831</h1>
+                <!-- Background image is now handled via CSS -->
             </div>
             <div id="button-container">
                 <button id="restartButton">Restart Entire Game</button>
@@ -218,10 +218,12 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
+            <h4>Degens Idle v0.832</h4>
             <p class="settings-note">Please note, this game is a labor of love and is always evolving. Save files might not work with major updates, but I'll do my best to keep things compatible.</p>
             <div class="settings-buttons">
                 <button id="exportSaveButton">Export Save</button>
                 <button id="importSaveButton">Import Save</button>
+                <button id="howToPlayButton">How to Play?</button>
             </div>
             <div class="settings-note">
                 Your feedback is crucial as the game grows. I genuinely value every suggestion and insight you share. Thank you for helping shape the future of Degens Idle!
