--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.832</title>
+    <title>Degens Idle v0.833</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
@@ -31,7 +31,7 @@
                 <button id="modalCancelButton">Cancel</button>
             </div>
             <div id="ascendUpgradeSelection" style="display:none;">
-                <h3>Choose the upgrade you want to use as your ascension focal point - this will permanently enhance it to be 10x as strong.:</h3>
+                <h3>Choose the upgrade you want to use as your ascension focal point - this will permanently enhance it to be 10x as strong:</h3>
                 <div id="ascendUpgradeList"></div>
                 <button id="upgradeConfirmButton" style="display:none;">Confirm Selection</button>
             </div>
@@ -135,9 +135,7 @@
                 </button>
             </div>
             <button id="prestigeButton" style="display:none;" class="custom-button">Prestige</button>
-            <p class="prestige-multiplier-text">
-                <span id="prestige-multiplier" class="prestige-multiplier-count">Prestige: x1.00 mult</span>
-            </p>
+            <p class="prestige-multiplier-text" id="prestige-multiplier">Prestige: x1.00 mult</p>
             <button id="ascendButton" style="display:none;" class="custom-button">Ascend Above Mortals</button>
             <p class="god-mode-text" id="god-mode-display">God-Mode Level 0 (x1.00 mult)</p>
             <button id="transcendButton" style="display:none;" class="custom-button">Parallel Transcend</button>
@@ -218,7 +216,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.832</h4>
+            <h4>Degens Idle v0.833</h4>
             <p class="settings-note">Please note, this game is a labor of love and is always evolving. Save files might not work with major updates, but I'll do my best to keep things compatible.</p>
             <div class="settings-buttons">
                 <button id="exportSaveButton">Export Save</button>
