--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.836</title>
+    <title>Degens Idle v0.837</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
@@ -178,6 +178,7 @@
                 <input type="text" id="tradeAmount" value="" placeholder="Enter (e.g. 1.5M or 50%)">
                 <p id="tradeRatioDisplay">Trade ratio is 10:1</p>
                 <button id="tradeButton">Trade</button>
+                <button id="tradeTenPercentButton" onclick="tradeTenPercent()">Trade 10%</button>
             </div>
             <div id="purchasedUpgrades">
                 <h2>Purchased Upgrades</h2>
@@ -216,7 +217,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.836</h4>
+            <h4>Degens Idle v0.837</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
