--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             <button id="closePowerHallButton">Exit</button>
         </div>
     </div>
-        <!-- Settings Overlay -->
+    <!-- Settings Overlay -->
     <div id="settingsOverlay" class="settings-overlay" style="display: none;">
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
@@ -263,14 +263,16 @@
             <h1>Automation Settings</h1>
             
             <!-- Content will be dynamically updated by JavaScript -->
-            <div id="automationContent" class="settings-section">
+            <div id="automationContent">
                 <!-- Placeholder content, will be replaced by JS -->
             </div>
-            
-            <button id="saveAutomationSettingsButton" style="display: none;">Save Settings</button>
-            <button id="exitAutomationOverlayButton">Exit</button>
+
+            <button id="saveAutomationSettingsButton" class="green-button">Save Settings</button>
+            <button id="exitAutomationOverlayButton" class="red-button">Cancel</button>
         </div>
     </div>
+
+
 
 
 
