--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.84</title>
+    <title>Degens Idle v0.841</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
@@ -231,6 +231,9 @@
 
         <!-- Fight Log -->
         <div id="fightLog" class="fight-log"></div>
+        
+        <!-- Forfeit Button -->
+        <button id="forfeitButton" class="forfeit-button">Forfeit</button>
     </div>
     <!-- Include the Library overlay HTML -->
     <div id="libraryOverlay" class="library-overlay" style="display: none;">
@@ -260,7 +263,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.84</h4>
+            <h4>Degens Idle v0.841</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
