--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.842</title>
+    <title>Degens Idle v0.85</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
@@ -198,6 +198,7 @@
                 <div class="stats">
                     <p>Health: <span id="playerHealthStat"></span></p>
                     <p>Power: <span id="playerPowerStat"></span></p>
+                    <p>Speed: <span id="playerAttackSpeedStat"></span></p>
                     <p>Defense: <span id="playerDefenseStat"></span></p>
                     <p>Crit Chance: <span id="playerCritChanceStat"></span></p>
                     <p>Crit Damage: <span id="playerCritDamageStat"></span></p>
@@ -218,6 +219,7 @@
                 <div class="stats">
                     <p>Health: <span id="enemyHealthStat"></span></p>
                     <p>Power: <span id="enemyPowerStat"></span></p>
+                    <p>Speed: <span id="enemyAttackSpeedStat"></span></p>
                     <p>Defense: <span id="enemyDefenseStat"></span></p>
                     <p>Crit Chance: <span id="enemyCritChanceStat"></span></p>
                     <p>Crit Damage: <span id="enemyCritDamageStat"></span></p>
@@ -263,7 +265,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.842</h4>
+            <h4>Degens Idle v0.85</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
