--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Degens Idle v0.855</title>
+    <title>Degens Idle v0.856</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="library.css">    
     <link rel="stylesheet" href="powerhall.css">    
@@ -197,7 +197,7 @@
             <div class="player-section">
                 <div class="stats">
                     <p>Health: <span id="playerHealthStat"></span></p>
-                    <p>Power: <span id="playerPowerStat"></span></p>
+                    <p>Damage: <span id="playerDamageStat"></span></p>
                     <p>Speed: <span id="playerAttackSpeedStat"></span></p>
                     <p>Defense: <span id="playerDefenseStat"></span></p>
                     <p>Crit Chance: <span id="playerCritChanceStat"></span></p>
@@ -218,7 +218,7 @@
             <div class="enemy-section">
                 <div class="stats">
                     <p>Health: <span id="enemyHealthStat"></span></p>
-                    <p>Power: <span id="enemyPowerStat"></span></p>
+                    <p>Damage: <span id="enemyDamageStat"></span></p>
                     <p>Speed: <span id="enemyAttackSpeedStat"></span></p>
                     <p>Defense: <span id="enemyDefenseStat"></span></p>
                     <p>Crit Chance: <span id="enemyCritChanceStat"></span></p>
@@ -265,7 +265,7 @@
         <div class="settings-overlay-content">
             <span class="close-button" id="closeSettingsOverlay">&times;</span>
             <h1>Settings</h1>
-            <h4>Degens Idle v0.855</h4>
+            <h4>Degens Idle v0.856</h4>
             
             <div class="settings-section">
                 <h3>Save Management</h3>
